# investment-strategy-cskill

./: AGENTS.md  CHANGELOG.md  DECISIONS.md  INSTALLATION.md  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json
data/: ef_progress.json  journal.json  portfolio.json  portfolio_template.csv
plans/: 00-overview.md  01-investment-philosophy.md  02-risk-management.md  03-due-diligence.md  04-portfolio-construction.md  05-trading-workflow.md  06-performance-metrics.md  07-governance-compliance.md  08-life-stage-planning.md  09-emergency-fund.md  10-tools-templates.md  11-glossary.md
references/: api-guide.md  customization.md  methodology.md  workflow-guide.md
scripts/: AGENTS.md  daily_checkin.py  init_portfolio.py  monthly_strategy.py  weekly_review.py
scripts/calculators/: __init__.py  phase_detector.py  position_sizer.py  rebalancer.py  risk_metrics.py
scripts/data_fetchers/: __init__.py  crypto_fetcher.py  fx_fetcher.py  stock_fetcher.py
scripts/trackers/: __init__.py  ef_tracker.py  journal_manager.py  portfolio_tracker.py
scripts/utils/: __init__.py  csv_handler.py  formatters.py  validators.py
templates/: daily_checklist.md  monthly_report.md  sample_portfolio.json  weekly_review.md
tests/: __init__.py  test_calculators.py  test_fetchers.py  test_integration.py
